FIX: refactor social alignment style. (5)

--- a/source/css/_common/components/post/post-meta.styl
+++ b/source/css/_common/components/post/post-meta.styl
@@ -43,18 +43,24 @@
 .posts-expand .post-comments-count {
   +mobile() { display: none; }
 }
-
 .social-like {
   height: 20px;
   text-align: center;
   border-top: 1px solid #eee;
-  padding-top: 6px;
+  padding-top: 9px;
   margin-top: 40px;
+  display: flex;
+  justify-content: center;
 }
 
 .vk_like {
-  display: inline-block;
   width: 85px;
-  height: 22px;
-  vertical-align: bottom;
+  height: 21px;
+  padding-top: 7px;
+  align-self: center;
+}
+
+.fb_like {
+  height: 30px;
+  align-self: center;
 }
